vemo-app/main/default/objects/Program__c/fields/AgeOfMajorityCollected__c.field-meta.xml
<CustomField>
    <fullName>AgeOfMajorityCollected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Age of Majority Collected</label>
    <type>Checkbox</type>
</CustomField>