vemo-app/main/default/objects/Program__c/fields/AgeOfMajorityRequired__c.field-meta.xml
<CustomField>
    <fullName>AgeOfMajorityRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Age of Majority Required</label>
    <type>Checkbox</type>
</CustomField>