vemo-app/main/default/objects/Program__c/fields/AgreementTemplate__c.field-meta.xml
<CustomField>
    <fullName>AgreementTemplate__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Agreement Template</label>
    <referenceTo>APXTConga4__Conga_Template__c</referenceTo>
    <relationshipLabel>Programs (Agreement Template)</relationshipLabel>
    <relationshipName>Programs1</relationshipName>
    <type>Lookup</type>
</CustomField>