vemo-app/main/default/objects/Program__c/fields/AllowedSpecialDisbursementTypes__c.field-meta.xml
<CustomField>
    <fullName>AllowedSpecialDisbursementTypes__c</fullName>
    <label>Allowed Special Disbursement Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DisbursementSpecialTypes</valueSetName>
    </valueSet>
</CustomField>