vemo-app/main/default/objects/Program__c/fields/ASDAttachmentCleanURL__c.field-meta.xml
<CustomField>
    <fullName>ASDAttachmentCleanURL__c</fullName>
    <formula>IF(!ISBLANK( ASDAttachmentID__c  ), $Setup.GlobalSettings__c.AttachmentDownloadPrefix__c &amp;  ASDAttachmentID__c  , "")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ASD Attachment Clean URL</label>
    <type>Text</type>
</CustomField>