vemo-app/main/default/objects/Program__c/fields/ASDAttachmentID__c.field-meta.xml
<CustomField>
    <fullName>ASDAttachmentID__c</fullName>
    <label>ASD Attachment ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>