vemo-app/main/default/objects/Program__c/fields/AttendanceDateRequired__c.field-meta.xml
<CustomField>
    <fullName>AttendanceDateRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, Attendance Dates will be available during the origination process</description>
    <inlineHelpText>If checked, Attendance Dates will be available during the origination process</inlineHelpText>
    <label>Attendance Date Required</label>
    <type>Checkbox</type>
</CustomField>