vemo-app/main/default/objects/Program__c/fields/AutomaticallyConfirmTransactions__c.field-meta.xml
<CustomField>
    <fullName>AutomaticallyConfirmTransactions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automatically Confirm Transactions</label>
    <type>Checkbox</type>
</CustomField>