vemo-app/main/default/objects/Program__c/fields/CongaTemplate__c.field-meta.xml
<CustomField>
    <fullName>CongaTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DEPRECATEConga Template</label>
    <referenceTo>APXTConga4__Conga_Template__c</referenceTo>
    <relationshipLabel>Programs</relationshipLabel>
    <relationshipName>Programs</relationshipName>
    <type>Lookup</type>
</CustomField>