vemo-app/main/default/objects/Program__c/fields/CreditApprovalScore__c.field-meta.xml
<CustomField>
    <fullName>CreditApprovalScore__c</fullName>
    <label>Credit Approval Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>