vemo-app/main/default/objects/Program__c/fields/CreditCheckRequired__c.field-meta.xml
<CustomField>
    <fullName>CreditCheckRequired__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If this box is checked, a credit check is required during the registration for this program</description>
    <inlineHelpText>If this box is checked, a credit check is required during the registration for this program</inlineHelpText>
    <label>Credit Check Required</label>
    <type>Checkbox</type>
</CustomField>