vemo-app/main/default/objects/Program__c/fields/CreditModel__c.field-meta.xml
<CustomField>
    <fullName>CreditModel__c</fullName>
    <label>Credit Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Configured in Program</fullName>
            </value>
            <value>
                <fullName>Detailed Evaluation</fullName>
                <isActive>false</isActive>
                <label>Detailed Evaluation</label>
            </value>
            <value>
                <fullName>Score Based</fullName>
                <isActive>false</isActive>
                <label>Score Based</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>