vemo-app/main/default/objects/Program__c/fields/CumulativeIncomeShareCap__c.field-meta.xml
<CustomField>
    <fullName>CumulativeIncomeShareCap__c</fullName>
    <label>Cumulative Income Share Cap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>