vemo-app/main/default/objects/Program__c/fields/DefaultRules__c.field-meta.xml
<CustomField>
    <fullName>DefaultRules__c</fullName>
    <description>How many months of what kind of (in)activity are required to define an account as being in default?</description>
    <inlineHelpText>How many months of what kind of (in)activity are required to define an account as being in default?</inlineHelpText>
    <label>Default Rules</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>