vemo-app/main/default/objects/Program__c/fields/DefermentTypeRules__c.field-meta.xml
<CustomField>
    <fullName>DefermentTypeRules__c</fullName>
    <description>For each deferment type: is payment term extended? is there a duration limit?</description>
    <inlineHelpText>For each deferment type: is payment term extended? is there a duration limit?</inlineHelpText>
    <label>Deferment Type Rules</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>