vemo-app/main/default/objects/Program__c/fields/DisbursementConfRequiredNotification__c.field-meta.xml
<CustomField>
    <fullName>DisbursementConfRequiredNotification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this field is checked, the SchoolEmailNotification2__c will be sent a notification email when there is one or more disbursement confirmations awaiting the program.</description>
    <inlineHelpText>If this field is checked, the SchoolEmailNotification2__c will be sent a notification email when there is one or more disbursement confirmations awaiting the program.</inlineHelpText>
    <label>Disbursement Conf Required Notification</label>
    <type>Checkbox</type>
</CustomField>