vemo-app/main/default/objects/Program__c/fields/DisclosureTemplate__c.field-meta.xml
<CustomField>
    <fullName>DisclosureTemplate__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Disclosure Template</label>
    <referenceTo>APXTConga4__Conga_Template__c</referenceTo>
    <relationshipLabel>Programs (Disclosure Template)</relationshipLabel>
    <relationshipName>Programs2</relationshipName>
    <type>Lookup</type>
</CustomField>