vemo-app/main/default/objects/Program__c/fields/EnrollmentBeginDate__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentBeginDate__c</fullName>
    <label>Enrollment Begin Date</label>
    <type>Date</type>
</CustomField>