vemo-app/main/default/objects/Program__c/fields/EnrollmentDefinition__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentDefinition__c</fullName>
    <description>program must specify what it considers to be enrolled in school for the deferment to be valid</description>
    <inlineHelpText>program must specify what it considers to be enrolled in school for the deferment to be valid</inlineHelpText>
    <label>Enrollment Definition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EnrollmentStatus</valueSetName>
    </valueSet>
</CustomField>