vemo-app/main/default/objects/Program__c/fields/EnrollmentEndDate__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentEndDate__c</fullName>
    <label>Enrollment End Date</label>
    <type>Date</type>
</CustomField>