vemo-app/main/default/objects/Program__c/fields/EnrollmentStatusCollected__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentStatusCollected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enrollment Status Collected</label>
    <type>Checkbox</type>
</CustomField>