vemo-app/main/default/objects/Program__c/fields/EnrollmentStatusRequired__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentStatusRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enrollment Status Required</label>
    <type>Checkbox</type>
</CustomField>