vemo-app/main/default/objects/Program__c/fields/EnrollmentType__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentType__c</fullName>
    <description>If this field is set to "Open" then any student can apply for the program.  If this field is set to "Invite Only" then students must be invited to the program for enrollment first (via "Inivted" StudentProgram__c record)</description>
    <inlineHelpText>If this field is set to "Open" then any student can apply for the program.  If this field is set to "Invite Only" then students must be invited to the program for enrollment first (via "Inivted" StudentProgram__c record)</inlineHelpText>
    <label>Enrollment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Invite Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>