vemo-app/main/default/objects/Program__c/fields/FeeRules__c.field-meta.xml
<CustomField>
    <fullName>FeeRules__c</fullName>
    <description>list of fee types and amounts that agreement is subject to</description>
    <inlineHelpText>list of fee types and amounts that agreement is subject to</inlineHelpText>
    <label>Fee Rules</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>