vemo-app/main/default/objects/Program__c/fields/GracePeriodMonths__c.field-meta.xml
<CustomField>
    <fullName>GracePeriodMonths__c</fullName>
    <label>Grace Period (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>