vemo-app/main/default/objects/Program__c/fields/GradeLevelCollected__c.field-meta.xml
<CustomField>
    <fullName>GradeLevelCollected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Grade Level Collected</label>
    <type>Checkbox</type>
</CustomField>