vemo-app/main/default/objects/Program__c/fields/GradeLevelDescription__c.field-meta.xml
<CustomField>
    <fullName>GradeLevelDescription__c</fullName>
    <label>Grade Level Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>