vemo-app/main/default/objects/Program__c/fields/GradeLevelRequired__c.field-meta.xml
<CustomField>
    <fullName>GradeLevelRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Grade Level Required</label>
    <type>Checkbox</type>
</CustomField>