vemo-app/main/default/objects/Program__c/fields/ImmediatePayment__c.field-meta.xml
<CustomField>
    <fullName>ImmediatePayment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, Income and Payment Information is mandatory as part of origination process</description>
    <inlineHelpText>If checked, Income and Payment Information is mandatory as part of origination process</inlineHelpText>
    <label>Immediate Payment</label>
    <type>Checkbox</type>
</CustomField>