vemo-app/main/default/objects/Program__c/fields/IncomeThreshold__c.field-meta.xml
<CustomField>
    <fullName>IncomeThreshold__c</fullName>
    <description>minimum income required to make payment</description>
    <inlineHelpText>minimum income required to make payment</inlineHelpText>
    <label>Income Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>