vemo-app/main/default/objects/Program__c/fields/InformationDefaultDays__c.field-meta.xml
<CustomField>
    <fullName>InformationDefaultDays__c</fullName>
    <label>Information Default Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>