vemo-app/main/default/objects/Program__c/fields/InstructionText__c.field-meta.xml
<CustomField>
    <fullName>InstructionText__c</fullName>
    <label>Instruction Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>