vemo-app/main/default/objects/Program__c/fields/LongProgramName__c.field-meta.xml
<CustomField>
    <fullName>LongProgramName__c</fullName>
    <inlineHelpText>For example: "Back a Boiler Income Share Agreement (ISA)".  This field is used to populate the fields in the email notifications related to this program.</inlineHelpText>
    <label>Long Program Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>