vemo-app/main/default/objects/Program__c/fields/MinimumIncomePerYear__c.field-meta.xml
<CustomField>
    <fullName>MinimumIncomePerYear__c</fullName>
    <formula>ROUND( MinimumIncomePerMonth__c * 12,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minimum Income per Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>