vemo-app/main/default/objects/Program__c/fields/PaymentDefaultDays__c.field-meta.xml
<CustomField>
    <fullName>PaymentDefaultDays__c</fullName>
    <label>Payment Default Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>