vemo-app/main/default/objects/Program__c/fields/PostAgreementFlow__c.field-meta.xml
<CustomField>
    <fullName>PostAgreementFlow__c</fullName>
    <description>This field is used by the front end to determine what screen to navigate to after the signature is obtained</description>
    <inlineHelpText>This field is used by the front end to determine what screen to navigate to after the signature is obtained</inlineHelpText>
    <label>Post Agreement Flow</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>Income Verification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>