vemo-app/main/default/objects/Program__c/fields/ProgramName__c.field-meta.xml
<CustomField>
    <fullName>ProgramName__c</fullName>
    <label>Program Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>