vemo-app/main/default/objects/Program__c/fields/ProgramNotes__c.field-meta.xml
<CustomField>
    <fullName>ProgramNotes__c</fullName>
    <description>Capture peculiarities or special conditions of a program.</description>
    <inlineHelpText>Capture peculiarities or special conditions of a program.</inlineHelpText>
    <label>Program Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>