vemo-app/main/default/objects/Program__c/fields/ProgramStatus__c.field-meta.xml
<CustomField>
    <fullName>ProgramStatus__c</fullName>
    <label>Program Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProgramStatus</valueSetName>
    </valueSet>
</CustomField>