vemo-app/main/default/objects/Program__c/fields/QuizAttemptsBeforeLock__c.field-meta.xml
<CustomField>
    <fullName>QuizAttemptsBeforeLock__c</fullName>
    <label>Quiz Attempts Before Lock</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>