vemo-app/main/default/objects/Program__c/fields/QuizLinkID__c.field-meta.xml
<CustomField>
    <fullName>QuizLinkID__c</fullName>
    <description>The ID used for this program's financial fitness quiz</description>
    <inlineHelpText>The ID used for this program's financial fitness quiz</inlineHelpText>
    <label>Quiz Link ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>