vemo-app/main/default/objects/Program__c/fields/QuizLinkURL__c.field-meta.xml
<CustomField>
    <fullName>QuizLinkURL__c</fullName>
    <description>The link used by this program for its financial fitness quiz</description>
    <inlineHelpText>The link used by this program for its financial fitness quiz</inlineHelpText>
    <label>Quiz Link URL</label>
    <type>Url</type>
</CustomField>