vemo-app/main/default/objects/Program__c/fields/QuizPostID__c.field-meta.xml
<CustomField>
    <fullName>QuizPostID__c</fullName>
    <label>Quiz Post ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>