vemo-app/main/default/objects/Program__c/fields/QuizResultID__c.field-meta.xml
<CustomField>
    <fullName>QuizResultID__c</fullName>
    <label>Quiz Result ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>