vemo-app/main/default/objects/Program__c/fields/RegistrationBeginDate__c.field-meta.xml
<CustomField>
    <fullName>RegistrationBeginDate__c</fullName>
    <label>Registration Begin Date</label>
    <type>Date</type>
</CustomField>