vemo-app/main/default/objects/Program__c/fields/RegistrationEndDate__c.field-meta.xml
<CustomField>
    <fullName>RegistrationEndDate__c</fullName>
    <label>Registration End Date</label>
    <type>Date</type>
</CustomField>