vemo-app/main/default/objects/Program__c/fields/ResidencyCollected__c.field-meta.xml
<CustomField>
    <fullName>ResidencyCollected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Residency Collected</label>
    <type>Checkbox</type>
</CustomField>