vemo-app/main/default/objects/Program__c/fields/ResidencyRequired__c.field-meta.xml
<CustomField>
    <fullName>ResidencyRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Residency Required</label>
    <type>Checkbox</type>
</CustomField>