vemo-app/main/default/objects/Program__c/fields/RightToCancelDays__c.field-meta.xml
<CustomField>
    <fullName>RightToCancelDays__c</fullName>
    <defaultValue>3</defaultValue>
    <label>Right to Cancel Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>