vemo-app/main/default/objects/Program__c/fields/SchoolEmailNotification1__c.field-meta.xml
<CustomField>
    <fullName>SchoolEmailNotification1__c</fullName>
    <description>One of the possible emails used for school notifications.</description>
    <inlineHelpText>One of the possible emails used for school notifications.</inlineHelpText>
    <label>School Email Notification 1</label>
    <type>Email</type>
</CustomField>