vemo-app/main/default/objects/Program__c/fields/SchoolEmailNotification2__c.field-meta.xml
<CustomField>
    <fullName>SchoolEmailNotification2__c</fullName>
    <label>School Email Notification 2</label>
    <type>Email</type>
</CustomField>