vemo-app/main/default/objects/Program__c/fields/SchoolName__c.field-meta.xml
<CustomField>
    <fullName>SchoolName__c</fullName>
    <formula>School__r.InstitutionShortName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>School Name</label>
    <type>Text</type>
</CustomField>