vemo-app/main/default/objects/Program__c/fields/SchoolProgramOfStudyCollected__c.field-meta.xml
<CustomField>
    <fullName>SchoolProgramOfStudyCollected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>School Program of Study Collected</label>
    <type>Checkbox</type>
</CustomField>