vemo-app/main/default/objects/Program__c/fields/SchoolProgramOfStudyRequired__c.field-meta.xml
<CustomField>
    <fullName>SchoolProgramOfStudyRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>School Program of Study Required</label>
    <type>Checkbox</type>
</CustomField>