vemo-app/main/default/objects/Program__c/fields/SendStudentDisbursementConfirmation__c.field-meta.xml
<CustomField>
    <fullName>SendStudentDisbursementConfirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this field is checked, a student will receive a disbursement confirmation notification when disbursements on this program are confirmed.</description>
    <inlineHelpText>If this field is checked, a student will receive a disbursement confirmation notification when disbursements on this program are confirmed.</inlineHelpText>
    <label>Send Student Disbursement Confirmation</label>
    <type>Checkbox</type>
</CustomField>