vemo-app/main/default/objects/Program__c/fields/StepText__c.field-meta.xml
<CustomField>
    <fullName>StepText__c</fullName>
    <label>Step Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>