vemo-app/main/default/objects/Program__c/fields/StudentPortalLink__c.field-meta.xml
<CustomField>
    <fullName>StudentPortalLink__c</fullName>
    <label>Student Portal Link</label>
    <type>Url</type>
</CustomField>