vemo-app/main/default/objects/Program__c/fields/StudentSignedISANotification__c.field-meta.xml
<CustomField>
    <fullName>StudentSignedISANotification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this field is checked, SchoolEmailNotification1__c email address will be notified when a student signs the ISA</description>
    <inlineHelpText>If this field is checked, SchoolEmailNotification1__c email address will be notified when a student signs the ISA</inlineHelpText>
    <label>Student Signed ISA Notification</label>
    <type>Checkbox</type>
</CustomField>