vemo-app/main/default/objects/Program__c/fields/TotalDefermentMonths__c.field-meta.xml
<CustomField>
    <fullName>TotalDefermentMonths__c</fullName>
    <label>Total Deferment Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>