vemo-app/main/default/objects/Program__c/validationRules/MinimumRightToCancelDate.validationRule-meta.xml
<ValidationRule>
    <fullName>MinimumRightToCancelDate</fullName>
    <active>true</active>
    <errorConditionFormula>OR(RightToCancelDays__c &lt; 3, ISBLANK(RightToCancelDays__c))</errorConditionFormula>
    <errorDisplayField>RightToCancelDays__c</errorDisplayField>
    <errorMessage>Right to Cancel Days cannot be less than 3 days</errorMessage>
</ValidationRule>